--- a/tetris.html
+++ b/tetris.html
@@ -14,17 +14,21 @@
 
         <div class="game_label"></div>
 
-        <div class="points">points</div>
+        <div class="info">
 
-        <div class="score_label"></div>
+            <div class="points">points</div>
 
-        <div class="next_block">next block</div>
+            <div class="score_label"></div>
 
-        <div class="next_label"></div>
+            <div class="next_block">next block</div>
 
-        <div class="time">time</div>
-        
-        <div class="time_label"></div>
+            <div class="next_label"></div>
+
+            <div class="time">time</div>
+
+            <div class="time_label"></div>
+
+        </div>
         
     </div>
 
